[package]
name = "whichport"
version = "0.2.3"
edition = "2021"
authors = ["Rexfelix <felesbaroq@gmail.com>"]
description = "Query listening TCP ports and their processes"
repository = "https://github.com/rexfelix/whichport.git"
license = "MIT"
keywords = ["port", "tcp", "network", "cli"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
